# AIO

./: .gitignore  .gitmodules  CMakeLists.txt
Configs/: selfplay.json
Extensions/Match/: CMakeLists.txt  MatchGame.cc  MatchGame.hpp  MatchOptions.cc  MatchOptions.hpp  main.cc
Extensions/NetTest/: CMakeLists.txt  main.cc
Extensions/Play/: CMakeLists.txt  main.cc
Extensions/Selfplay/: CMakeLists.txt  SelfplayGame.cc  SelfplayGame.hpp  SelfplayOptions.cc  SelfplayOptions.hpp  main.cc
Includes/AIO/Game/: Board.hpp  BoardDef.hpp
Includes/AIO/Network/: FakeNetwork.hpp  Network.hpp  Preprocess.hpp  TrtNetwork.hpp
Includes/AIO/Search/: SearchEngine.hpp  SearchManager.hpp  SearchOptions.hpp  TreeNode.hpp
Includes/AIO/Utils/: Barrier.hpp  Utils.hpp  WaitGroup.hpp
Sources/AIO/: CMakeLists.txt
Sources/AIO/Game/: Board.cc  BoardDef.cc
Sources/AIO/Network/: FakeNetwork.cc  Preprocess.cc  TrtNetwork.cc
Sources/AIO/Search/: SearchEngine.cc  SearchManager.cc  SearchOptions.cc  TreeNode.cc
Sources/AIO/Utils/: Barrier.cc  WaitGroup.cc
Sources/Play/: CMakeLists.txt  main.cc
Sources/Trainer/: hdf5dataset.py  make_engine.sh  make_hdf5.py  network.py  pth2onnx.py  train.py  view_gibo.py
